force-app/main/default/objects/Step_Execution__c/Step_Execution__c.object-meta.xml
<CustomObject>
    <description>Individual step execution within a compliance workflow, tracking rule evaluation results</description>
    <label>Step Execution</label>
    <nameField>
        <displayFormat>SE-{0000000}</displayFormat>
        <label>Step Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>