force-app/main/default/objects/Step_Execution__c/fields/Executed_At__c.field-meta.xml
<CustomField>
    <fullName>Executed_At__c</fullName>
    <description>Timestamp when this step was executed</description>
    <label>Executed At</label>
    <type>DateTime</type>
</CustomField>