force-app/main/default/objects/Step_Execution__c/fields/Execution_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Execution_Time_Ms__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Time in milliseconds to evaluate this rule</description>
    <label>Execution Time (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>