force-app/main/default/objects/Step_Execution__c/fields/Finding_Details__c.field-meta.xml
<CustomField>
    <fullName>Finding_Details__c</fullName>
    <description>Detailed finding information for failed evaluations</description>
    <label>Finding Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>