force-app/main/default/objects/Step_Execution__c/fields/Rule_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Developer_Name__c</fullName>
    <description>DeveloperName of the Compliance_Rule__mdt that was evaluated</description>
    <label>Rule Developer Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>