force-app/main/default/objects/Step_Execution__c/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <description>Display name of the rule that was evaluated</description>
    <label>Rule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>