force-app/main/default/objects/Step_Execution__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Severity level of this rule evaluation</description>
    <label>Severity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>