force-app/main/default/objects/Step_Execution__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Evaluation result status</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>PASSED</fullName><default>false</default><label>Passed</label></value>
            <value><fullName>FAILED</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>ERROR</fullName><default>false</default><label>Error</label></value>
            <value><fullName>SKIPPED</fullName><default>false</default><label>Skipped</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>