force-app/main/default/objects/Step_Execution__c/fields/Workflow_Execution__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Execution__c</fullName>
    <description>Parent workflow execution</description>
    <label>Workflow Execution</label>
    <referenceTo>Workflow_Execution__c</referenceTo>
    <relationshipLabel>Step Executions</relationshipLabel>
    <relationshipName>Step_Executions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>